Arquivo index.html atualizado 19/09

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
+	<!-- favicon -->
+	<link rel ="icon" href="imagens/favicon.png">
 	<title>Home - html5 css3</title>
 	<!-- SEO IMPORTANTE -->
 	<meta name = description content= "Aprenda html5 e css3 de forma simples e prática">
@@ -11,16 +13,70 @@
 
 </head>
 <body>
+<!-- estrutura principal -->
+<div id="main">
+	<!-- cabeçalho -->
+	<header>
+		<img src="imagens/logotipo.png" alt="html5 css3">
+	</header>
+			<!-- menu -->
+			<nav>
+				<!-- ul*4>a-->
+			<ul>
+				<li><a href ="#">Home</a><li>
+				<li><a href ="#">Sobre</a></li>
+				<li><a href ="#">Conteúdo</a></li>
+					<ul>
+						<li><a href="#">html</a></li>
+						<li><a href="#">css</a></li>
+						<li><a href="#">javascript</a></li>
+						</ul>
+					
+						<li><a href ="#">Contato</a></li>
+				
+				</ul>
+				<!-- conteudo -->
 
-	<h1>Aprenda html5 e CSS3 de forma simples e prática, desenvolvendo um site reponsivos </h1>
+			</nav>
+			<!-- conteudo -->
+			<section id = "banner">
+				<img src="imagens/banner3.jpg" alt="curso html css3">
+			</section id= "heading">
 
-	<p>Mussum Ipsum, cacilds vidis litro abertis. Detraxit consequat et quo num tendi nada. Leite de capivaris, leite de mula manquis sem cabeça. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Manduma pindureta quium dia nois paga.
+<h1> Aprenda HTML 5 e CSS3 de forma simples e pratica desenvolvendo um site reponnsivo do "zero" </h1>
+	</section id="destaque">
 
-Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Per aumento de cachacis, eu reclamis. Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi. In elementis mé pra quem é amistosis quis leo.
+	<!-- bloco 1 -->
+	<img src="imagens/smartphone.png" alt= "mobile">
+	<h2>Destaque 1 </h2>
+	<p>lorem ipsum lorem ipsum</p>
+	<a href="#" botao 1> </a>
 
-Mé faiz elementum girarzis, nisi eros vermeio. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis. Nullam volutpat risus nec leo commodo, ut interdum diam laoreet. Sed non consequat odio. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus.
- </p>
+	<!-- bloco 2 -->
+	<img src="imagens/tablet.png" alt= "reponsivo">
+	<h2>Destaque 2 </h2>
+	<p>lorem ipsum lorem ipsum</p>
+	<a href="#" botao 2> </a>
 
+		<!-- bloco 3 -->
+	<img src="imagens/desktop.png" alt= "frontend">
+	<h2>Destaque 3 </h2>
+	<p>lorem ipsum lorem ipsum</p>
+	<a href="#" botao 3> </a>
+
+
+	<p>3 blocos de destaque</p>
+	<section>
+		<!-- rodapé -->
+		<footer>
+			<p>®2018 -Kevin Souza</p>
+		</footer>
+
+
+
+
+	</div>
+	
 
 
 </body>
