index.html atualizado fundo novo 24/09/18

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
 
 	<!-- a linha abaixo "garante" o layout responsivo nos diversos dispositivos mobile-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -31,7 +32,6 @@
 						<li><a href="#">css</a></li>
 						<li><a href="#">javascript</a></li>
 						</ul>
-					
 						<li><a href ="#">Contato</a></li>
 				
 				</ul>
@@ -40,7 +40,7 @@
 			</nav>
 			<!-- conteudo -->
 			<section id = "banner">
-				<img src="imagens/banner3.jpg" alt="curso html css3">
+				<img style src="imagens/banner3.jpg" alt="curso html css3">
 			</section id= "heading">
 
 <h1> Aprenda HTML 5 e CSS3 de forma simples e pratica desenvolvendo um site reponnsivo do "zero" </h1>
