--- a/public_html/estudo_css/index.html
+++ b/public_html/estudo_css/index.html
@@ -4,18 +4,14 @@
 	<meta charset="UTF-8">
 	<title>Estudo do CSS</title>
 	<link rel="stylesheet" href="style.css">
-
 </head>
 <body>
-
 	<ul>
-		<li><a href = "index.html">index</a></li>
-		<li><a href = "index2.html">index2</a></li>
-		<li><a href = "index3.html">index3</a></li>
+		<li><a href="index.html">index</a></li>
+		<li><a href="index2.html">index2</a></li>
+		<li><a href="index3.html">index3</a></li>
 	</ul>
-
 	<h1>Estudo do CSS</h1>
-	<h2>Kevin</h2>
-	
+	<h2>Kevin Souza</h2>
 </body>
 </html>
