--- a/public_html/estudo_css/index2.html
+++ b/public_html/estudo_css/index2.html
@@ -4,24 +4,21 @@
 	<meta charset="UTF-8">
 	<title>Estudo do CSS</title>
 	<link rel="stylesheet" href="style.css">
+	<!-- estilo de página -->
 	<style>
-	body{
-
-
-	background-color: #00BF;
-}
-</style>
+		body{
+			background-color: #00ff00;
+		}
+	</style>
 
 </head>
 <body>
-		<ul>
-		<li><a href = "index.html">index</a></li>
-		<li><a href = "index2.html">index2</a></li>
-		<li><a href = "index3.html">index3</a></li>
+	<ul>
+		<li><a href="index.html">index</a></li>
+		<li><a href="index2.html">index2</a></li>
+		<li><a href="index3.html">index3</a></li>
 	</ul>
-
 	<h1 id = "diferente">Estudo do CSS</h1>
-	<h2>Souza</h2>
-	
+	<h2>Exemplo 2</h2>
 </body>
 </html>
