--- a/public_html/estudo_css/index3.html
+++ b/public_html/estudo_css/index3.html
@@ -6,15 +6,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-		<ul>
-		<li><a href = "index.html">index</a></li>
-		<li><a href = "index2.html">index2</a></li>
-		<li><a href = "index3.html">index3</a></li>
+	<ul>
+		<li><a href="index.html">index</a></li>
+		<li><a href="index2.html">index2</a></li>
+		<li><a href="index3.html">index3</a></li>
 	</ul>
-	
-	<h1 >Estudo do CSS</h1>
-	<!-- ESTILO EM LINHA **** PRIORIDADE ****-->
-	<h2 style "color: ##FF0000;">Cosenza</h2>
-	
+	<h1>Estudo do CSS</h1>
+	<!-- estilo em linha *** PRIORIDADE *** -->
+	<h2 style="color: #ffff00;">Exemplo 3</h2>
 </body>
 </html>
